@@ -43,7 +43,7 @@ The default metricsets are `info`and `stat`.
 [float]
 === Compatibility
 
-The HAProxy metricsets were tested with HAProxy 1.6 and are expected to work with all 1.6 versions.
+The HAProxy metricsets are tested with HAProxy versions from 1.6, 1.7 to 1.8.
 
 
 [float]
