@@ -1,4 +1,4 @@
-FROM haproxy:1.8
+FROM haproxy:1.7
 RUN apt-get update && apt-get install -y netcat
 HEALTHCHECK --interval=1s --retries=90 CMD nc -z localhost 14567
 COPY ./haproxy.conf /usr/local/etc/haproxy/haproxy.cfg
