@@ -1,2 +1,4 @@
+HAPROXY_1_6_HOST=haproxy_1_6
+HAPROXY_1_7_HOST=haproxy_1_7
 HAPROXY_HOST=haproxy
 HAPROXY_PORT=14567
